updated setup and git ignore files

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,20 +1,20 @@
 [metadata]
 name = argparse_types
 version = 0.0.0
-long_description = README.md
-long_description__content_type = text/markdown
-url = https://github.com/tech-chad/
+description = addition types to use with argparse
+long_description = file: README.md
+long_description_content_type = text/markdown
+url = https://github.com/tech-chad/argparse_types
 author = Chad Larson
 author_email = techchad2@gmail.com
 license = MIT
 license_file = LICENSE
+classifiers =
+    programming Language :: Python :: 3
+    programming Language :: Python :: 3.6
 
 [options]
-packages = find:
 py_modules = argparse_types
-install_requires:
-    importlib-metadata>=1.6
-    importlib-resources>=1.5
 python_requires = >= 3.6.1
 
 [options.packages.find]
