Fixed typo in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,8 +10,8 @@ author_email = techchad2@gmail.com
 license = MIT
 license_file = LICENSE
 classifiers =
-    programming Language :: Python :: 3
-    programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.6
 
 [options]
 py_modules = argparse_types
