--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,7 @@ license_file = LICENSE
 classifiers =
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
 
 [options]
 py_modules = argparse_types
